# cargo-auto

./: .auto_version_from_date.json  .automation_tasks_rs_file_hashes.json  .gitattributes  .gitignore  .markdownlint.json  Cargo.toml  DEVELOPMENT.md  README.md  RELEASES.md  temp10.txt
.github/workflows/: rust.yml  rust_fmt_auto_build_test.yml  win_rust_fmt_auto_build_test.yml
automation_tasks_rs/: .file_hashes.json  .gitignore  Cargo.toml  README.md  cargo_auto_config.json  crates_io_config.json  github_api_config.json
automation_tasks_rs/src/: build_cli_bin_mod.rs  build_cli_bin_mod.rs_old  build_cli_bin_musl_mod.rs  build_cli_bin_win_mod.rs  build_lib_mod.rs  build_lib_mod.rs_old  build_wasm_mod.rs  cargo_auto_github_api_mod.rs  cargo_auto_github_api_mod.rs_old  copy_files_to_strings_mod.rs  generic_functions_mod.rs  generic_functions_mod.rs_old  main.rs  secrets_always_local_mod.rs  tasks_mod.rs  utils_mod.rs
automation_tasks_rs/src/cargo_auto_lib/: auto_cargo_toml_mod.rs  auto_cargo_toml_to_md_mod.rs  auto_check_micro_xml_mod.rs  auto_copy_files_to_strings_mod.rs  auto_delete_old_js_snippets_mod.rs  auto_doc_tidy_html_mod.rs  auto_git_mod.rs  auto_github_mod.rs  auto_helper_functions_mod.rs  auto_lines_of_code_mod.rs  auto_md_to_doc_comments_mod.rs  auto_plantuml_mod.rs  auto_playground_mod.rs  auto_semver_mod.rs  auto_semver_or_date_mod.rs  auto_shell_mod.rs  auto_version_from_date_mod.rs  error_mod.rs  mod.rs  public_api_mod.rs  utils_mod.rs
automation_tasks_rs/src/encrypt_decrypt_with_ssh_key_mod/: crates_io_api_token_mod.rs  crates_io_api_token_mod.rs_old  docker_io_api_token_mod.rs  encrypt_decrypt_mod.rs  encrypt_decrypt_mod.rs_old  github_api_token_with_oauth2_mod.rs  github_api_token_with_oauth2_mod.rs_old  mod.rs  mod.rs_old
docs/: COPYRIGHT.txt  crates.js  help.html  index.html  main.js  search-index.js  settings.html  settings.js  source-files.js  src-files.js  tidy_warnings.txt
docs/cargo_auto/: all.html  constant.AUTOMATION_TASKS_RS.html  constant.GREEN.html  constant.RED.html  constant.RESET.html  constant.YELLOW.html  fn.__stability.html  fn.__static_ref_initialize.html  fn.already_exists_automation_tasks_rs.html  fn.auto_new.html  fn.build_automation_tasks_rs.html  fn.build_automation_tasks_rs_if_needed.html  fn.build_project_automation_tasks_rs.html  fn.completion.html  fn.copy_template.html  fn.is_not_run_in_rust_project_root_directory.html  fn.main.html  fn.main_returns_anyhow_result.html  fn.match_first_argument.html  fn.print_help_from_cargo_auto.html  fn.print_help_when_no_argument.html  index.html  sidebar-items.js  static.LAZY.html  struct.FileItem.html  struct.GREEN.html  struct.PATH_AUTOMATION_TASKS_RS.html  struct.PATH_CARGO_TOML.html  struct.PATH_FILE_HASHES_JSON.html  struct.PATH_GITIGNORE.html  struct.PATH_SRC.html  struct.PATH_SRC_MAIN_RS.html  struct.PATH_TARGET_DEBUG_AUTOMATION_TASKS_RS.html  struct.RED.html  struct.RESET.html  struct.YELLOW.html
docs/cargo_auto_local_lib/: all.html  constant.GREEN.html  constant.RED.html  constant.RESET.html  constant.YELLOW.html  fn.is_not_run_in_rust_project_root_directory.html  index.html  sidebar-items.js  struct.FileItem.html  struct.PATH_AUTOMATION_TASKS_RS.html  struct.PATH_CARGO_TOML.html  (+5 more)
src/: file_hashes_mod.rs  inside_of_rust_project_mod.rs  lib.rs  main.rs  outside_of_rust_project_mod.rs  template_automation_tasks_rs_mod.rs  template_basic.rs  template_basic_mod.rs  template_new_auto_for_cli_mod.rs  template_new_auto_mod.rs  template_new_cli_mod.rs  template_new_pwa_wasm_mod.rs  template_new_wasm_mod.rs  template_newcli_mod.rs  template_with_lib.rs  template_with_lib_mod.rs  utils_mod.rs
template_automation_tasks_rs/: README.md
template_basic/: Cargo.toml  README.md
template_new_auto/: .gitignore  Cargo.toml  README.md
template_new_cli/: .gitattributes  .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  RELEASES.md
template_new_cli/.github/workflows/: rust.yml
template_new_cli/automation_tasks_rs/: Cargo.toml
template_new_cli/automation_tasks_rs/src/: main.rs  secrets_always_local_mod.rs
template_new_cli/examples/: example_1.rs
template_new_cli/src/: hello_mod.rs  lib.rs  utils_mod.rs
template_new_cli/tests/: integration_test.rs
template_new_pwa_wasm/: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  RELEASES.md
template_new_pwa_wasm/automation_tasks_rs/: .gitignore  Cargo.toml
template_new_pwa_wasm/automation_tasks_rs/src/: main.rs  secrets_always_local_mod.rs
template_new_pwa_wasm/publish_script/: hello_world_publish.sh
template_new_pwa_wasm/src/: lib.rs  main_mod.rs
template_new_pwa_wasm/src/main_mod/: lib_mod.rs
template_new_pwa_wasm/src/main_mod/lib_mod/: hello_mod.rs  web_sys_mod.rs
template_new_pwa_wasm/src/main_mod/lib_mod/web_sys_mod/: html_source_code_mod.rs
template_new_pwa_wasm/web_server_folder/cargo_auto_template_new_pwa_wasm/: index.html
template_new_pwa_wasm/web_server_folder/cargo_auto_template_new_pwa_wasm/css/: basic_style.css
template_new_pwa_wasm/web_server_folder/pwa_short_name/: index.html  manifest.json  service_worker.js  start_service_worker.js
template_new_pwa_wasm/web_server_folder/pwa_short_name/css/: basic_style.css  fontawesome.css
template_new_wasm/: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  RELEASES.md
template_new_wasm/.github/workflows/: rust_fmt_auto_build_test.yml
template_new_wasm/automation_tasks_rs/: Cargo.toml
template_new_wasm/automation_tasks_rs/src/: main.rs  secrets_always_local_mod.rs
template_new_wasm/publish_script/: hello_world_publish.sh
template_new_wasm/src/: lib.rs  main_mod.rs
template_new_wasm/src/main_mod/: lib_mod.rs
template_new_wasm/src/main_mod/lib_mod/: hello_mod.rs  web_sys_mod.rs
template_new_wasm/web_server_folder/bestia_dev_cargo_auto_new_wasm/: index.html
template_new_wasm/web_server_folder/cargo_auto_template_new_wasm/: index.html
template_new_wasm/web_server_folder/cargo_auto_template_new_wasm/css/: basic_style.css
template_newcli/: Cargo.toml  README.md
template_with_lib/: Cargo.toml  README.md
template_with_lib/src/: main.rs
(+219 files in other folders)
