[package]
name = "cargo-auto"
version = "2024.504.1703"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
description = "Automation tasks coded in Rust language for the workflow of Rust projects"
repository = "https://github.com/automation-tasks-rs/cargo-auto"
readme = "README.md"
license = "MIT"
# Keyword must be only one word: lowercase letters, hyphens(-) or numbers, less then 35 characters, at most 5 keywords per crate
keywords = ["maintained", "ready-for-use", "rustlang","automation","workflow"]
categories = ["command-line-interface","development-tools::build-utils","development-tools::cargo-plugins"]
# publish as a cargo tool. Only this files.
publish = true
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/*"
]

[dependencies]
lazy_static="1.4.0"
base64ct = {version = "1.6.0", features = ["alloc"] }
json5 = "0.4.1"
serde = { version = "1.0.196", features = ["derive"] }
image = "0.24.8"
ico = "0.3.0"
ring = "0.17.7"
data-encoding = "2.5.0"
anyhow="1.0.79"
serde_derive = "1.0.196"
serde_json = "1.0.113"
reqwest = { version = "0.12.3", features = ["blocking"] }
flate2 = "1.0.30"
tar = "0.4.40"
walkdir = "2.5.0"

[lib]
name = "cargo_auto_local_lib"
path = "src/lib.rs"
# A flag for enabling documentation of this target. This is used by `cargo doc`.
doc = true

[[bin]]
name = "cargo-auto"
path = "src/bin/cargo-auto/main.rs"
# A flag for enabling documentation of this target. This is used by `cargo doc`.
doc = true
