[package]
name = "cargo-auto"
# binary executable does not need to be SemVer, because nobody depends on it
version = "2025.404.1618"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
description = "Automation tasks coded in Rust language for the workflow of Rust projects"
repository = "https://github.com/automation-tasks-rs/cargo-auto"
readme = "README.md"
license = "MIT"
# Keyword must be only one word: lowercase letters, hyphens(-) or numbers, less then 35 characters, at most 5 keywords per crate
keywords = ["maintained", "ready-for-use", "rustlang","automation","workflow"]
# allowed categories are listed here <https://crates.io/category_slugs>
categories = ["command-line-interface","development-tools::build-utils","development-tools::cargo-plugins"]
# publish as a cargo tool. Only this files.
publish = true
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/*"
]

# SemVer rules: Major version zero (0.y.z) is for initial development. Anything MAY change at any time. The public API SHOULD NOT be considered stable.
# WARNING: Although dependencies in Cargo.toml look like a specific version of the crate, they are just like a caret version (=x.y.z) and actually specify 
# the minimum version and allow automatic SemVer compatible updates up to a MAJOR increment! Always check the true version with `cargo tree`!
[dependencies]
lazy_static="1.5.0"
base64ct = {version = "1.7.1", features = ["alloc"] }
json5 = "=0.4.1"
image = "0.25.5"
ico = "0.4.0"
sha2 = "0.10.8"
data-encoding = "2.8.0"
thiserror="2.0.12"
anyhow="1.0.97"

serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.140"

# reqwest 0.12.12 is the last version that builds in win-git-bash
reqwest = { version = "=0.12.12", features = ["blocking"] }

flate2 = "1.1.1"
tar = "0.4.44"
walkdir = "=2.5.0"

tracing = {version="0.1.41", features=["attributes" ]}
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std", "fmt", "time","ansi"] }
# tracing-appender="0.2.3"
time = {version="0.3.40", features=["macros","local-offset"]}

# The library enables the code to be used by other binary executables.
[lib]
name = "cargo_auto_main_lib"
path = "src/lib.rs"
# A flag for enabling documentation of this target. This is used by `cargo doc`.
doc = false

# The only and main binary executable.
[[bin]]
name = "cargo-auto"
path = "src/bin/cargo-auto/main.rs"
# A flag for enabling documentation of this target. This is used by `cargo doc`.
doc = true
