[package]
name = "cargo_auto_template_new_cli"
version = "0.0.1"
description = "Basic Rust project template for CLI and library, more than just `cargo new hello`"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/automation-tasks-rs/cargo_auto_template_new_cli"
# Keyword must be only one word: lowercase letters, hyphens(-) or numbers, less then 35 characters.
keywords = ["maintained", "work-in-progress", "rustlang"]
categories = ["command-line-interface"]
publish = false

[dependencies]
log = "0.4"
pretty_env_logger="0.5.0"
thiserror = "1.0.30"
anyhow="1.0.56"

[lib]
name = "cargo_auto_template_new_cli_lib"
path = "src/lib.rs"
# A flag for enabling documentation of this target. This is used by `cargo doc`.
doc = true

[[bin]]
name = "cargo_auto_template_new_cli"
path = "src/bin/cargo_auto_template_new_cli/main.rs"
# A flag for enabling documentation of this target. This is used by `cargo doc`.
doc = true
