
[package]
name = "automation_tasks_rs"
version = "0.1.1"
authors = ["Luciano Bestia <luciano.bestia@gmail.com>"]
edition = "2018"
description = "cargo auto - automation tasks written in Rust language"
publish = false

[dependencies]
cargo_auto_lib = "0.7.19"
cargo_auto_github_lib = "0.1.5"
tokio = {version = "1.10.0", features = ["rt","rt-multi-thread","fs"]}